# OpenCvDemo

./: .gitignore  README.md  build.gradle  cfg.gradle  gradle.properties  ndk.xmind  settings.gradle  课堂统计箱子个数-发尹星军.xmind
cmakedemo/: build.gradle
cmakedemo/src/: debug.keystore  shared.pk12
cmakedemo/src/androidTest/java/com/example/cmakedemo/: ExampleInstrumentedTest.java
cmakedemo/src/main/: AndroidManifest.xml
cmakedemo/src/main/cpp/: 01gray.h  01zhuhanshu.cpp  02gray.cpp  CMakeLists.txt  TutorialConfig.cpp  TutorialConfig.h  TutorialConfig.h.in  native-lib.cpp
cmakedemo/src/main/cpp/include/c_lib/: c_file.c
cmakedemo/src/main/cpp/include/lib_log/: LogUtil.cpp  LogUtil.h
cmakedemo/src/main/cpp/opencv/jni/: android.toolchain.cmake
cmakedemo/src/main/cpp/opencv/jni/include/opencv2/: ml.hpp
cmakedemo/src/main/cpp/opencv/jni/include/opencv2/core/: version.hpp
cmakedemo/src/main/cpp/opencv/jni/include/opencv2/flann/: hierarchical_clustering_index.h
cmakedemo/src/main/cpp/opencv/jni/include/opencv2/videoio/: videoio_c.h
cmakedemo/src/main/java/com/alibaba/imageprocess/: GrayUtil.java
cmakedemo/src/main/java/com/example/cmakedemo/: MainActivity.java  OpenCvApplication.java  SampleListActivity.kt  SoApplication.kt  main.kt
cmakedemo/src/main/java/com/example/cmakedemo/aop/: ContentView.java  EventBase.java  InjectUtil.java  (+5 more)
cmakedemo/src/main/res/layout/: activity_main.xml  opencv_activity_base.xml  opencv_activity_main.xml  opencv_activity_sample_list.xml  opencv_sample_list_item.xml  opencv_sample_type.xml  opencv_surfaceview.xml
cmakedemo/src/main/res/mipmap-anydpi-v26/: opencv_ic_launcher.xml
cmakedemo/src/main/res/values/: colors.xml  dimen.xml  strings.xml  styles.xml
cmakedemo/src/test/java/com/example/cmakedemo/: ExampleUnitTest.java
common/: build.gradle
common/src/androidTest/java/com/example/common/: ExampleInstrumentedTest.java
common/src/main/java/com/example/common/: BaseActivity.java  BaseToolbarActivity.kt  CommonApplication.java  ICommonProxy.java  SingleTon.java
common/src/main/res/layout/: activity_base_toolbar.xml
common/src/main/res/values/: color.xml  style.xml
common/src/test/java/com/example/common/: ExampleUnitTest.java
cppso/: build.gradle
cppso/src/androidTest/java/com/example/cppso/: ExampleInstrumentedTest.kt
cppso/src/main/: AndroidManifest.xml
cppso/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-operation.cpp
cppso/src/main/cpp/aviplayer/: AviPlayer.cpp  player.cpp  player.h
cppso/src/main/cpp/commom/: commonutils.cpp  commonutils.h  logutil.h
cppso/src/main/java/com/example/cppso/: NativeOperation.kt  SampleNativeMethod.java
cppso/src/test/java/com/example/cppso/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
plugin/: build.gradle
plugin/src/main/groovy/com/plugin/demo/: MyPluginDemo.groovy
plugin/src/main/groovy/com/xia/plugin/: PluginImpl.groovy  TaskListener.groovy
release/com/plugin/demo/plugin-test/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
release/com/plugin/demo/plugin-test/1.0.0-SNAPSHOT/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  plugin-test-1.0.0-20200209.004557-1.jar.md5  plugin-test-1.0.0-20200209.004557-1.jar.sha1  plugin-test-1.0.0-20200209.004557-1.pom  plugin-test-1.0.0-20200209.004557-1.pom.md5  plugin-test-1.0.0-20200209.004557-1.pom.sha1
testapp/: build.gradle
testapp/src/androidTest/java/com/example/testapp/: ExampleInstrumentedTest.java
testapp/src/test/java/com/example/testapp/: ExampleUnitTest.java
(+22 files in other folders)
